--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,3 +105,15 @@ button {
 .submit-button {
   margin: 10px 0 0 120px;
 }
+
+.hidden{
+	display: none;
+}
+
+.green{
+	background-color: #42f471;
+}
+
+.red{
+	background-color: #f44242;
+}
